@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-12-25T02:05:02Z",
+  "timestamp" : "2025-12-26T02:04:11Z",
   "count_outdated" : 502,
   "uniques_outdated" : 135,
-  "count" : 503,
-  "uniques" : 136,
+  "count" : 504,
+  "uniques" : 137,
   "views" : [
     {
       "timestamp": "2025-12-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-25T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
